Implement part of backend and gui

--- a/data/meson.build
+++ b/data/meson.build
@@ -5,7 +5,8 @@ gnome = import('gnome')
 
 blueprints = custom_target('blueprints',
   input: files(
-    'ui/window.blp'
+    'ui/window.blp',
+    'ui/item.blp',
   ),
   output: '.',
   command: [find_program('blueprint-compiler'), 'batch-compile', '@OUTPUT@', '@CURRENT_SOURCE_DIR@', '@INPUT@'],
